# hopper

./: .env  .gitignore  COMPONENT_USAGE.md  MODULARIZATION.md  README.md  docker-compose.yml  global.css  index.html  render.yaml  temp.py
api/: .coverage  .env.boilerplate  .env.example  .env.render.example  .env_exemple  .gitignore  Dockerfile  LEIA-ME-PRIMEIRO.txt  Makefile  README.md  __main__.py  air.toml  check_db.py  config.py  coverage.xml  docker-compose.db.yml  exemplo_modelos_powerbi.py  go.mod  go.sum  hopper.db  init.sql  init_db.py  init_sqlite.sql  main.go  main.py  make.bat  pyproject.toml  pytest.ini  run_api.py  run_tests.bat  run_tests.ps1  test-cors.ps1
api/.github/workflows/: test.yml
api/docs/: CHECKLIST-CORS-RENDER.md  URGENTE-CORS-FIX.md  logging.md
api/schemas/: __init__.py
api/services/: powerbi.py
api/src/: .gitignore  main.py  main_new.py  requirements.txt
api/src/api/: database.py  logger.py  middleware.py
api/src/app/: db.py  main.py
api/src/controllers/: __init__.py  auth_controller.py  category_controller.py  dashboard_controller.py
api/src/models/: __init__.py  auth.py  category.py  dashboard.py  powerbi.py
api/src/repositories/: __init__.py  category_repository.py  dashboard_repository.py  user_repository.py
api/src/routes/: __init__.py  auth.py  category.py  dashboard.py
api/src/services/: __init__.py  auth_service.py
api/src/utils/: __init__.py  dependencies.py
api/tests/: README.md  conftest.py  test_api.py  test_auth.py  test_integration.py  test_model_extra_fields.py  test_models.py  test_powerbi.py
api/v1/: __init__.py  reports.py
(+277 files in other folders)
